prune deprecated gnus pieces

--- a/emacs.org
+++ b/emacs.org
@@ -2463,7 +2463,8 @@ Last, but not least, enable linking to messages from org-mode.
 
 [[http://www.gnus.org/manual/gnus_toc.html][Gnus]] is a built-in message reader for Emacs.  It supports reading and
 composing both mail and news.  The [[http://www.gnus.org/manual/gnus_toc.html][manual]] is available online.  There
-are lots and lots of posts online about configuring *Gnus*.  Much of
+are lots and lots of posts online about configuring *Gnus*.  Some nice
+examples include:
 this is influenced by:
 
 - [[http://www.cataclysmicmutation.com/2010/11/multiple-gmail-accounts-in-gnus/][Multiple GMail Accounts in Gnus]]
@@ -2471,372 +2472,8 @@ this is influenced by:
 - [[http://qsdfgh.com/articles/2014/08/11/gnus-configuration-example.html][QSDFGH Gnus configuration example]]
 - [[https://github.com/kensanata/ggg][Gnus, Gmail, GPG]]
 
-A note regarding terminology: Gnus uses the term /archiving/ to describe
-the method for storing mail you send.
-
-There is a lot to digest in the configuration below:
-
-- There is documentation on how to configure the [[http://www.gnus.org/manual/big-gnus.html#Summary-Buffer-Lines][summary line]] fand [[http://www.gnus.org/manual/big-gnus.html#Group-Line-Specification][group line]] format.
-- Accounts are configured via =gnus-secondary-select-method=.  The
-  default is ~nil~.
-- [[https://www.gnu.org/software/emacs/manual/html_node/gnus/Posting-Styles.html][Posting styles]] are discuss what =gnus-posting-sytles= hopes to accomplish.
-- There is also  [[http://www.gnu.org/software/emacs/manual/html_node/gnus/Group-Parameters.html][group parameters]] for [[http://www.gnu.org/software/emacs/manual/html_node/gnus/Posting-Styles.html#Posting-Styles][posting styles]] and [[https://www.gnu.org/software/emacs/manual/html_node/gnus/Expiring-Mail.html#Expiring-Mail][expiring mail]].
-- Enable the [[https://www.gnu.org/software/emacs/manual/html_node/gnus/The-Gnus-Registry.html][Gnus Registry]] and finally pull in all the above pieces.
-
-~gnus~, by default, will only show new emails.  You should use =C-u RET=
-to open a group so that t will show all messages (old and new).
-
- #+BEGIN_SRC emacs-lisp 
-   (use-package gnus
-     :commands gnus
-     :init
-     (progn
-       (require 'nnir)
-       (gnus-registry-initialize)
-       (setq
-         gnus-select-method '(nnnil "")
-         gnus-secondary-select-methods
-         `((nnimap "Work"
-             (nnimap-stream shell)
-             (nnimap-shell-program "/usr/libexec/dovecot/imap -o mail_location=maildir:~/.mail/Work:INBOX=~/.mail/Work/INBOX:LAYOUT=fs")
-             (nnir-search-engine imap)
-             )
-            (nnimap "Personal"
-              (nnimap-stream shell)
-              (nnimap-shell-program "/usr/libexec/dovecot/imap -o mail_location=maildir:~/.mail/Personal:INBOX=~/.mail/Personal/INBOX:LAYOUT=fs")
-              (nnir-search-engine imap)
-              )
-            )
-         gnus-parameters '(
-                            ("Work.*"
-                              (display . all)
-                              (gcc-self . "nnimap+Work:Sent")
-                              (posting-style
-                                (gcc "nnimap+Work:Sent")
-                                (address "stephenf@nero.net")
-                                (signature-file "~/.signature")))
-                            ("Personal.*"
-                              (display . all)
-                              (gcc-self . "nnimap+Personal:Sent")
-                              (posting-style
-                                (gcc "nnimap+Personal:Sent")
-                                (address sf/email-personal)
-                                (signature user-full-name)
-                                ("X-Message-SMTP-Method" "smtp smtp.gmail.com 465 sfromm")))
-                            ("Work:INBOX"
-                              (display . all)
-                              (expiry-target . sf/work-expiry-target)
-                              ; (expiry-wait . 7)
-                              )
-                            ("Work:Archive"
-                              (display . all))
-                            ("Work:announce"
-                              (total-expire . t)
-                              (expiry-wait . 90)
-                              (expiry-target . "nnimap+Work:Trash"))
-                            ("Work:lists"
-                              (total-expire . t)
-                              (expiry-wait . 90)
-                              (expiry-target . "nnimap+Work:Trash"))
-                            ("Work:ops"
-                              (total-expire . t)
-                              (expiry-wait . 7)
-                              (expiry-target . sf/work-expiry-target))
-                            ("Personal:INBOX"
-                              (display . all))
-                              ;(expiry-target . sf/personal-expiry-target)
-                              ;(expiry-wait . 7)
-                            )
-         )
-       (require 'gnus-gravatar)
-       (require 'gnus-icalendar)
-       (gnus-icalendar-setup)
-       (setq
-         gnus-agent nil
-         gnus-directory (expand-file-name (concat user-emacs-directory "user/gnus"))
-         gnus-home-directory gnus-directory
-         gnus-read-newsrc-file nil
-         gnus-save-newsrc-file nil
-         gnus-always-read-dribble-file t
-         gnus-gcc-mark-as-read t
-         gnus-message-archive-method '(nnimap "Work")
-         gnus-message-archive-group "nnimap+Work:Sent"
-         gnus-use-full-window nil
-         gnus-message-replysign t
-         gnus-message-replyencrypt t
-         gnus-activate-level 2
-         gnus-subscribe-newsgroup-method 'gnus-subscribe-alphabetically
-         mm-inline-text-html-with-images t
-         mm-text-html-renderer 'shr
-         mail-user-agent 'gnus-user-agent
-         shr-color-visible-distance-min 10
-         shr-color-visible-luminance-min 60
-         gnus-buttonized-mime-types
-         '("multipart/alternative" "multipart/encrypted" "multipart/signed")
-
-         gnus-visible-headers (mapcar  #'(lambda (header) (format "^%s:" header))
-                                (split-string (mapconcat 'identity
-                                                '("From Organization Subject Newsgroups"
-                                                   "To Cc Reply-To Followup-To Mail-Followup-To"
-                                                   "Thread-Topic"
-                                                   "X-Mailer X-Newsreader"
-                                                   "User-Agent X-Posting-Agent"
-                                                   "X-Spam-Level" "Date") " ")))
-         nnmail-extra-headers '(To Cc Newsgroups Content-Type Thread-Topic Thread-Index)
-         )
-       (require 'epg)
-       (setq
-         mml2015-use 'epg
-         mm-verify-option 'always
-         mm-decrypt-option 'always
-         mml2015-encrypt-to-self t
-         mml2015-always-trust nil
-         mml2015-cache-passphrase t
-         mml2015-sign-with-sender t
-         gnus-message-replyencrypt t
-         gnus-message-replysign t
-         gnus-message-replysignencrypted t
-         gnus-treat-x-pgp-sig t
-         mm-decrypt-option 'always
-         mm-sign-option nil ;; mm-sign-option 'guided
-         )
-       (setq
-         gnus-score-over-mark   ?↑
-         gnus-score-below-mark  ?↓
-         gnus-ticked-mark       ?⚑
-         gnus-dormant-mark      ?⚐
-         gnus-expirable-mark    ?♻
-         gnus-read-mark         ?✓
-         gnus-del-mark          ?✗
-         gnus-killed-mark       ?☠
-         gnus-replied-mark      ?⟲
-         gnus-forwarded-mark    ?⤳
-         gnus-cached-mark       ?☍
-         gnus-recent-mark       ?★
-         gnus-unseen-mark       ?✩
-         gnus-unread-mark       ?✉)
-       (setq
-         gnus-sum-thread-tree-indent          " "
-         gnus-sum-thread-tree-single-indent   "◎ "
-         gnus-sum-thread-tree-root            "● "
-         gnus-sum-thread-tree-false-root      "☆"
-         gnus-sum-thread-tree-vertical        "│"
-         gnus-sum-thread-tree-leaf-with-other "├─► "
-         gnus-sum-thread-tree-single-leaf     "╰─► " 
-         gnus-summary-newsgroup-prefix        "⇶"
-         gnus-fetch-old-headers               'some
-         gnus-summary-make-false-root         'empty  ; add empty node when needing a root nod
-         gnus-summary-make-false-root-always  nil     ; only if necessary
-         gnus-summary-display-arrow           t 
-         gnus-summary-thread-gathering-function 'gnus-gather-threads-by-references
-         gnus-thread-hide-subtree             nil     ; expand threads
-         gnus-build-sparse-threads            'some   ; fetch some threads to get better threads
-         gnus-single-article-buffer           t)      ; no more than one buffer per article
-       (setq
-         gnus-user-date-format-alist '(
-                                        ((gnus-seconds-today) . "Today %H:%M")
-                                        ((+ 86400 (gnus-seconds-today)) . "Yest. %H:%M")
-                                        (604800 . "%a %H:%M") ;;that's one week
-                                        ((gnus-seconds-month) . "%a %d")
-                                        ((gnus-seconds-year) . "%B %d")
-                                        (t . "%B %d '%y") )
-         gnus-summary-line-format (concat
-                                    "%z%U%R "
-                                    "%~(max-right 17)~(pad-right 17)&user-date;  "
-                                    "%~(max-right 20)~(pad-right 20)f "
-                                    "%B%s\n")
-         gnus-thread-sort-functions '(gnus-thread-sort-by-most-recent-date)
-         gnus-group-line-format "%ue%uM %S%p %P%5y:%B%(%g%)%O\n"
-         gnus-topic-line-format "%i〜 %(%{%n%}%) 〜  %v\n"
-         )
-
-       (defun sf/personal-expiry-target (group)
-         "Expire email in personal account"
-         (setq nnmail-fancy-expiry-targets sf/personal-expiry-targets)
-         (nnmail-fancy-expiry-target group)
-         )
-       (defun sf/work-expiry-target (group)
-         "Expire email in work account"
-         (setq nnmail-fancy-expiry-targets sf/work-expiry-targets)
-         (nnmail-fancy-expiry-target group)
-         )
-       (defvar *mbsync-process* nil)
-       (add-hook 'gnus-get-new-news-hook
-         (defun sf/run-mbsync ()
-           (unless (process-live-p *mbsync-process*)
-             (setq *mbsync-process* (start-process "mbsync"
-                                      (with-current-buffer
-                                        (get-buffer-create "*mbsync*")
-                                        (buffer-disable-undo)
-                                        (erase-buffer)
-                                        (current-buffer))
-                                      "nice"
-                                      (executable-find "mbsync") "-a" "-V")
-               )
-             )
-           )
-         )
-
-       (add-hook 'message-sent-hook 'gnus-score-followup-thread)
-
-       (add-hook 'gnus-summary-exit-hook 'gnus-summary-bubble-group)
-
-       (add-hook 'gnus-group-mode-hook 'gnus-topic-mode)
-
-       (add-hook 'gnus-after-getting-new-news-hook 'gnus-notifications)
-
-       (add-hook 'gnus-after-getting-new-news-hook 'gnus-group-find-new-groups)
-
-       (add-hook 'gnus-after-getting-new-news-hook
-         (defun sf/gnus-sort-groups-after-new-news ()
-           (gnus-group-sort-groups gnus-group-sort-function)))
-
-       (defun gnus-user-format-function-@ (header)
-         "Display @ for message with attachment in summary line.
-          You need to add `Content-Type' to `nnmail-extra-headers' and
-          `gnus-extra-headers', see Info node `(gnus)To From Newsgroups'."
-         (let ((case-fold-search t)
-                (ctype (or (cdr (assq 'Content-Type (mail-header-extra header)))
-                         "text/plain"))
-                (indicator " "))
-           (when (string-match "^multipart/mixed" ctype)
-             (setq indicator "@"))
-           indicator))
-
-       (defun gnus-user-format-function-e (dummy)
-         "Display the unread mark in group line"
-         (char-to-string gnus-unread-mark))
-
-       (defun gnus-user-format-function-M (dummy)
-         "Display the ticked mark in group line"
-         (char-to-string gnus-ticked-mark))
-
-       (defun sf/newsgroup-prefix (grp)
-         "Return prefix of gnus newsgroup name"
-         (concat (car (split-string grp ":")) ":"))
-
-       (defun sf/email-trash ()
-         "Trash the current or marked emails"
-         (interactive)
-         (gnus-summary-move-article nil (concat (sf/newsgroup-prefix gnus-newsgroup-name) "Trash"))
-         (gnus-summary-next-article))
-
-       (defun sf/email-archive ()
-         "Archive the current or marked emails"
-         (interactive)
-         (gnus-summary-move-article nil (concat (sf/newsgroup-prefix gnus-newsgroup-name) "Archive"))
-         (gnus-summary-next-article))
-
-       (define-key gnus-summary-mode-map (kbd "d") 'sf/email-trash)
-       (define-key gnus-summary-mode-map (kbd "a") 'sf/email-archive)
-       (define-key gnus-summary-mode-map (kbd "r") 'gnus-summary-reply-with-original)
-       (define-key gnus-summary-mode-map (kbd "R") 'gnus-summary-wide-reply-with-original)
-       (define-key gnus-summary-mode-map (kbd "f") 'gnus-summary-mail-forward)
-       )
-     )
-   (eval-when-compile
-     (defvar gnus-balloon-face-0)
-     (defvar gnus-balloon-face-1))
-   (use-package gnus-demon
-     :init
-     (progn
-       (gnus-demon-add-handler 'gnus-group-get-new-news 5 t)))
-   (use-package rs-gnus-summary
-     :config
-     (defalias 'gnus-user-format-function-size
-       'rs-gnus-summary-line-message-size)
-     (setq gnus-balloon-face-0 'rs-gnus-balloon-0)
-     (setq gnus-balloon-face-1 'rs-gnus-balloon-1))
-   (use-package bbdb
-     :config
-     (progn
-       (bbdb-initialize 'gnus 'message)
-       (bbdb-mua-auto-update-init 'gnus)
-       (setq
-         bbdb-file (concat user-emacs-directory "user/bbdb")
-         bbdb-mua-pop-up-window-size 2
-         )
-       ))
-#+END_SRC
-
-Lastly, the following will configure adaptive scoring.  This is
-presently disabled, but preserved in case I want to go this route.
-
- #+BEGIN_SRC emacs-lisp :tangle no
-   (setq
-     gnus-use-adaptive-scoring '(word line)
-     gnus-adaptive-word-length-limit 5
-     gnus-adaptive-word-no-group-words t
-     gnus-default-adaptive-score-alist '((gnus-unread-mark)
-                                          (gnus-ticked-mark (from 4))
-                                          (gnus-dormant-mark (from 5))
-                                          (gnus-del-mark (from -4) (subject -1))
-                                          (gnus-read-mark (from 4) (subject 2))
-                                          (gnus-expirable-mark (from -1) (subject -1))
-                                          (gnus-killed-mark (from -1) (subject -3))
-                                          (gnus-kill-file-mark)
-                                          (gnus-ancient-mark)
-                                          (gnus-low-score-mark)
-                                          (gnus-catchup-mark (from -1) (subject -1)))
-     )
- #+END_SRC
-
-**** Keyboard shortcuts
-
-*Group*
-
-Gnus starts in the [[http://www.gnus.org/manual/gnus_11.html#Group-Buffer][group buffer]].  This lists subscribed groups.  For an
-email account, this would be email folders.
-
-| Keybinding | Command                              | Description                             |
-|------------+--------------------------------------+-----------------------------------------|
-| A A        | gnus-group-list-active               | List all groups available from server   |
-| L          | gnus-group-list-all-groups           | List all groups with level ARG or lower |
-| u          | gnus-group-unsubscribe-current-group | Toggle subscription to current GROUP    |
-| t          | gnus-topic-mode                      | Show topics                             |
-| g          | gnus-group-get-new-news              | Get newly arrived articles              |
-
-*Summary*
-
-The [[http://www.gnus.org/manual/gnus_30.html#Summary-Buffer][summary buffer]] displays a line for each article.  You can move
-around, read articles, reply, and so on.
-
-| Keybinding | Command                          | Description                                  |
-|------------+----------------------------------+----------------------------------------------|
-| =          | gnus-summary-expand-window       | Make the summary buffer take up entire frame |
-| n          | gnus-summary-next-unread-article | Select unread article after current one      |
-| p          | gnus-summary-prev-unread-article | Select unread article before current one     |
-| N          | gnus-summary-next-article        | Select article after current one             |
-| P          | gnus-summary-prev-article        | Select article before current one            |
-| / w        | gnus-summary-pop-limit           | Remove search limit                          |
-|            |                                  |                                              |
-
-
-
-**** Server buffer
-
-The Gnus [[http://www.gnus.org/manual/gnus_159.html#SEC159][server buffer]] can be entered via *^*
-(*gnus-group-enter-server-mode*).  Gnus uses backends (eg nnimap) to
-connect to real servers.  The server buffer is a way to view the
-backends in use.
-
-**** Summary buffer
-
-The Gnus [[http://www.gnus.org/manual/gnus_59.html#SEC59][summary buffer]] will show the messages for a given group.  Think
-of it as emails in a folder.  Type *SPACE* to view the currently
-selected article.  Type *=* (*gnus-summary-expand-window*) to close the
-article view and only display the summary.
-
-**** Splitting
-
-[[https://www.gnu.org/software/emacs/manual/html_node/gnus/Splitting-Mail.html][Splitting mail]] is taking incoming mail and filtering it out to different
-groups (aka folders).  There's also [[https://www.gnu.org/software/emacs/manual/html_node/gnus/Fancy-Mail-Splitting.html#Fancy-Mail-Splitting][fancy mail splitting]].
-
-To assist with debugging splitting, you can use the command =M-x
-nnmail-split-history=.  This will show you where the previous mail split
-put messages.  There's also the command =gnus-summary-respool-trace=
-command to see what re-spooling of messages would do.  There are other
-[[https://www.gnu.org/software/emacs/manual/html_node/gnus/Mail-Group-Commands.html][mail group]] commands that may be of interest.
+I used to maintain a /gnus/ configuration here, but never really settled
+into something I found usable over a long term.  
 
 ** Le Fin
 
