--- a/emacs.org
+++ b/emacs.org
@@ -2154,9 +2154,9 @@ information, see http://www.djcbsoftware.nl/code/mu/mu4e/Contexts.html#Contexts.
                           ("flag:unread AND NOT flag:trashed" "Unread messages" ?u)
                           ("maildir:/Personal/INBOX OR maildir:/Work/INBOX" "ONE Inbox" ?I)
                           ("flag:flagged" "Flagged" ?f)
-                          ("date:today..now AND NOT ( maildir:/Personal/Archive OR maildir:/Work/Archive* OR maildir:/Work/Sent OR maildir:/Personal/Sent OR maildir:/Work/Trash OR maildir:/Personal/Trash OR maildir:/Personal/Spam OR maildir:/Work/Spam )" "Today's messages" ?t)
-                          ("date:3d..now    AND NOT ( maildir:/Personal/Archive OR maildir:/Work/Archive* OR maildir:/Work/Sent OR maildir:/Personal/Sent OR maildir:/Work/Trash OR maildir:/Personal/Trash OR maildir:/Personal/Spam OR maildir:/Work/Spam )" "Last 3 days" ?3)
-                          ("date:7d..now    AND NOT ( maildir:/Personal/Archive OR maildir:/Work/Archive* OR maildir:/Work/Sent OR maildir:/Personal/Sent OR maildir:/Work/Trash OR maildir:/Personal/Trash OR maildir:/Personal/Spam OR maildir:/Work/Spam )" "Last 7 days" ?7)
+                          ("date:today..now AND ( maildir:/Personal/INBOX OR maildir:/Work/INBOX OR maildir:/Work/announce OR maildir:/Work/lists OR maildir:/Work/ops )" "Today's messages" ?t)
+                          ("date:3d..now    AND ( maildir:/Personal/INBOX OR maildir:/Work/INBOX OR maildir:/Work/announce OR maildir:/Work/lists OR maildir:/Work/ops )" "Last 3 days" ?3)
+                          ("date:7d..now    AND ( maildir:/Personal/INBOX OR maildir:/Work/INBOX OR maildir:/Work/announce OR maildir:/Work/lists OR maildir:/Work/ops )" "Last 7 days" ?7)
                           ("maildir:/Personal/Archive or maildir:/Work/Archive*" "Archive" ?a)
                           (,sf/mu4e-bookmark-vendors "Vendors" ?v)
                           (,sf/mu4e-bookmark-providers "ISPs" ?p)
