--- a/emacs.org
+++ b/emacs.org
@@ -2157,6 +2157,7 @@ information, see http://www.djcbsoftware.nl/code/mu/mu4e/Contexts.html#Contexts.
                           ("date:today..now AND ( maildir:/Personal/INBOX OR maildir:/Work/INBOX OR maildir:/Work/announce OR maildir:/Work/lists OR maildir:/Work/ops )" "Today's messages" ?t)
                           ("date:3d..now    AND ( maildir:/Personal/INBOX OR maildir:/Work/INBOX OR maildir:/Work/announce OR maildir:/Work/lists OR maildir:/Work/ops )" "Last 3 days" ?3)
                           ("date:7d..now    AND ( maildir:/Personal/INBOX OR maildir:/Work/INBOX OR maildir:/Work/announce OR maildir:/Work/lists OR maildir:/Work/ops )" "Last 7 days" ?7)
+                          ("date:..7d       AND ( maildir:/Personal/INBOX OR maildir:/Work/INBOX OR maildir:/Work/announce OR maildir:/Work/lists OR maildir:/Work/ops )" "Old email" ?o)
                           ("maildir:/Personal/Archive or maildir:/Work/Archive*" "Archive" ?a)
                           (,sf/mu4e-bookmark-vendors "Vendors" ?v)
                           (,sf/mu4e-bookmark-providers "ISPs" ?p)
@@ -2373,18 +2374,19 @@ Define various keybindings.
         notmuch-show-part-button-default-action 'notmuch-show-view-part
         notmuch-saved-searches 
         '(
-           (:name "inbox"      :key "i" :query "tag:inbox")
-           (:name "flagged"    :key "f" :query "tag:flagged")
-           (:name "today"      :key "t" :query "date:today..now and not tag:archive and not tag:sent")
-           (:name "3 days"     :key "3" :query "date:3d..now and not tag:archive and not tag:sent")
-           (:name "7 days"     :key "7" :query "date:7d..now and not tag:archive and not tag:sent")
+           (:name "inbox"        :key "i" :query "tag:inbox")
+           (:name "flagged"      :key "f" :query "tag:flagged")
+           (:name "today"        :key "t" :query "date:today..now and not tag:archive and not tag:sent")
+           (:name "3 days"       :key "3" :query "date:3d..now and not tag:archive and not tag:sent")
+           (:name "7 days"       :key "7" :query "date:7d..now and not tag:archive and not tag:sent")
+           (:name "old messages" :key "o" :query "date:..7d and not tag:archive and not tag;sent")
            (:name "needs attention" :key "!" :query "folder:Work/INBOX and ( tag:copyright or tag:flagged )")
-           (:name "announce"   :key "a" :query "tag:announce and not tag:archive")
-           (:name "reports"    :key "r" :query "tag:reports")
-           (:name "lists"      :key "l" :query "tag:lists and not tag:archive")
-           (:name "noc"        :key "n" :query "tag:noc and not tag:archive")
-           (:name "attachment" :key "A" :query "tag:attachment")
-           (:name "bulk"       :key "b" :query "not tag:archive and ( tag:bulk or tag:nts or tag:nms or tag:internet2 )")
+           (:name "announce"     :key "a" :query "tag:announce and not tag:archive")
+           (:name "reports"      :key "r" :query "tag:reports")
+           (:name "lists"        :key "l" :query "tag:lists and not tag:archive")
+           (:name "noc"          :key "n" :query "tag:noc and not tag:archive")
+           (:name "attachment"   :key "A" :query "tag:attachment")
+           (:name "bulk"         :key "b" :query "not tag:archive and ( tag:bulk or tag:nts or tag:nms or tag:internet2 )")
            )
         )
       (add-to-list 'auto-mode-alist '("notmuch-raw-id" . markdown-mode))
