--- a/emacs.org
+++ b/emacs.org
@@ -775,6 +775,7 @@ other news-reading utility.
            ("http://sachachua.com/blog/feed" emacs )
            ("http://blog.aaronbieber.com/feed.xml" emacs )
            ("https://www.masteringemacs.org/feed" emacs )
+           ("http://karl-voit.at/feeds/lazyblorg-all.atom_1.0.links-and-content.xml" emacs)
            ("http://planetsysadmin.com/atom.xml" devops)
            ("https://feeds.feedburner.com/sysadvent" devops)
            ("http://fedoraplanet.org/atom.xml" linux fedora)
